# soccer

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  calibrate.txt  changes.patch  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.drone/: format.yaml  lint.yaml
camera/: main-2.py  main-2.py.autosave  main.py
scripts/: api.sh  bootstrap.sh  calibrate.py  calibrate.sh  calibrate2.sh  minicom.cap  requirements.txt
soccer-bootloader/: Cargo.toml  build.rs  memory.x
soccer-bootloader/src/: main.rs
soccer-main/: Cargo.toml  build.rs  memory.x
soccer-main/src/: bootloader.rs  config.rs  constants.rs  logger.rs  main.rs  peripherals.rs
soccer-main/src/hardware/: button.rs  camera.rs  imu.rs  mod.rs  motor.rs  superteam_module.rs  temts.rs  uart.rs
soccer-main/src/modules/: ball.rs  coordinate.rs  heading.rs  mod.rs  movement.rs
soccer-main/src/network/: index.html  mod.rs  server.rs  wireless.rs
soccer-main/src/strategy/: attack.rs  bounds.rs  clear.rs  defence.rs  get_out.rs  goalie.rs  mod.rs  no_ball.rs
soccer-main/src/utils/: debug.rs  functions.rs  logger.rs  mod.rs
soccer-vision/: Cargo.toml  build.rs
soccer-vision/src/: button.rs  calibration.rs  fusion.rs  led.rs  lidar.rs  lidar_imu.rs  main.rs  uart.rs
