[workspace]
members = [
    "soccer-bootloader",
    "soccer-main",
    "soccer-vision",
]
resolver = "2"

[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy" }
embassy-boot-rp = { git = "https://github.com/embassy-rs/embassy" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-net = { git = "https://github.com/embassy-rs/embassy" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }
heapless = { git = "https://github.com/rust-embedded/heapless" }
imu-fusion = { git = "https://github.com/mark2b/imu-fusion-rs" }

[profile.release]
opt-level = "z"
debug = true
codegen-units = 1
lto = "fat"
panic = "abort"
