[package]
name = "soccer-main"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", default-features = false, features = ["inline-asm"] }
cortex-m-rt = { version = "0.7", default-features = false, features = [] }
critical-section = { version = "1.1", default-features = false, features = [] }
cyw43 = { version = "0.1", default-features = false, features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1", default-features = false, features = ["defmt"] }
defmt = { version = "0.3", default-features = false, features = [] }
embassy-boot-rp = { version = "0.2", default-features = false, features = ["defmt"] }
embassy-embedded-hal = { version = "0.1", default-features = false, features = ["defmt", "time"] }
embassy-executor = { version = "0.5", default-features = false, features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "integrated-timers", "nightly"] }
embassy-futures = { version = "0.1", default-features = false, features = ["defmt"] }
embassy-net = { version = "0.4", default-features = false, features = ["defmt", "tcp"] }
embassy-net-driver = { version = "0.2", default-features = false, features = [] }
embassy-net-driver-channel = { version = "0.2", default-features = false, features = [] }
embassy-rp = { version = "0.1", default-features = false, features = ["critical-section-impl", "defmt", "rt", "time-driver", "unstable-pac"] }
embassy-sync = { version = "0.5", default-features = false, features = ["defmt"] }
embassy-time = { version = "0.3", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = { version = "1.0", default-features = false, features = [] }
embedded-hal-nb = { version = "1.0", default-features = false, features = [] }
embedded-hal-async = { version = "1.0", default-features = false, features = [] }
embedded-storage = { version = "0.3", default-features = false, features = [] }
embedded-storage-async = { version = "0.4", default-features = false, features = [] }
heapless = { version = "0.8", default-features = false, features = [] }
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }
nb = { version = "1.0", default-features = false, features = [] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
paste = { version = "1.0", default-features = false, features = [] }
picoserve = { version = "0.10", default-features = false, features = ["defmt", "embassy"] }
pid = { version = "4.0", default-features = false, features = [] }
pio = { version = "0.2", default-features = false, features = [] }
pio-proc = { version = "0.2", default-features = false, features = [] }
portable-atomic = { version = "1.6", default-features = false, features = ["critical-section"] }
rand = { version = "0.8", default-features = false, features = [] }
serde = { version = "1.0", default-features = false, features = [] }
static_cell = { version = "2.0", default-features = false, features = ["nightly"] }

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["chrono", "git2"] }

[features]
#default = ["network"]
default = []
network = []
